# str-match

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: attr.rs  macro.rs  matches.rs
src/: implements.rs  lib.rs
