[package]
name = "str-match"
version = "0.1.2"
edition = "2021"
authors = [
    "Shirayama Kazatsuyu <shirayama.kazatsuyu@gmail.com>",
]
license = "MIT OR Apache-2.0"

description = "Format pattern like str match macro"
repository = "https://github.com/kazatsuyu/str-match"
readme = "README.md"
keywords = ["macro"]
categories = []


[lib]
proc-macro = true

[features]
default = []
attribute = []

[[example]]
name = "attr"
path = "examples/attr.rs"
required-features = ["attribute"]

[[example]]
name = "macro"
path = "examples/macro.rs"

[dependencies]
proc-macro2 = "1.0.43"
syn = { version = "1.0.99", features = ["full"] }
quote = "1.0.21"

[dev-dependencies]
pretty_assertions = "1.3.0"
